removed ref. to angular expandable list simulation list reworked with bootstrap expander

--- a/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
+++ b/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
@@ -2,7 +2,7 @@
 /* TODO resolve webpack post css issue with some postcss library to enable :root css varables*/
 
 #brand {
-    color: lightskyblue
+    color: #82aff5;
 }
 
 li.nav-item a {
