home page in progress

--- a/Portal/ClientApp/src/app/components/simulations/simulations.component.html
+++ b/Portal/ClientApp/src/app/components/simulations/simulations.component.html
@@ -1,4 +1,4 @@
-<div class="px-lg-3" *ngIf="simulations">
+<div class="px-2 px-lg-3" *ngIf="simulations">
     <new-simulation-form class="d-none d-lg-block" id="new-simulation-form" (simulationCreated)="onSimulationCreated($event)"></new-simulation-form>
     
     <div class="item-container">
