--- a/Portal/ClientApp/src/app/components/app/app.component.html
+++ b/Portal/ClientApp/src/app/components/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="container-fluid body-content">
     <div class="row">
-        <div class="col">
+        <div class="col px-0">
             <div *ngIf="errors" class="bg-danger text-white text-center p-2 m-2">
                 <h6 *ngFor="let error of errors">{{error}}</h6>
             </div>
