--- a/Portal/ClientApp/src/app/components/home/home.component.html
+++ b/Portal/ClientApp/src/app/components/home/home.component.html
@@ -1,16 +1,43 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-    <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-    <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-    <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
-    <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-    <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-    <li><strong>Server-side prerendering</strong>. For faster initial loading and improved SEO, your Angular app is prerendered on the server. The resulting HTML is then transferred to the browser where a client-side copy of the app takes over.</li>
-    <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
-    <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular app will be rebuilt and a new instance injected into the page.</li>
-    <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
-</ul>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Training Centers</h5>
+                <p>Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
+                    Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Simulation Vendors</h5>
+                <p>Vivamus varius, augue sed malesuada luctus, purus lectus posuere orci, eget dictum est risus non diam.
+                    Suspendisse dictum vehicula sem, vel commodo lorem aliquam in. Nunc at metus justo. Etiam.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Research Labs</h5>
+                <p>Donec lacinia facilisis nulla et imperdiet. Aenean laoreet eleifend posuere. Donec consequat semper convallis.
+                    Morbi rhoncus nunc sit amet ipsum sollicitudin laoreet. Cras dapibus enim vel dolor laoreet, ut eleifend</p>
+            </div>
+        </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
