--- a/Portal/ClientApp/src/app/components/home/home.component.html
+++ b/Portal/ClientApp/src/app/components/home/home.component.html
@@ -1,43 +1,67 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Training Centers</h5>
-                <p>Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
-                    Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Simulation Vendors</h5>
-                <p>Vivamus varius, augue sed malesuada luctus, purus lectus posuere orci, eget dictum est risus non diam.
-                    Suspendisse dictum vehicula sem, vel commodo lorem aliquam in. Nunc at metus justo. Etiam.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/images/training_center.jpg" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Research Labs</h5>
-                <p>Donec lacinia facilisis nulla et imperdiet. Aenean laoreet eleifend posuere. Donec consequat semper convallis.
-                    Morbi rhoncus nunc sit amet ipsum sollicitudin laoreet. Cras dapibus enim vel dolor laoreet, ut eleifend</p>
+<header class="masterhead">
+    <div class="container h-100">
+        <div class="h-100 row align-items-end justify-content-center text-center">
+            <div class="d-flex-column mb-5">
+                <h1 class="display-4 display-lg-2 text-light text-uppercase" id="heading">Where simulations meet</h1>
             </div>
         </div>
     </div>
+</header>
 
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
+<section class="cards page-section bg-light">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card-holder col-lg-4 col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Training Centers"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Training Centers</h5>
+                        <p class="card-text">
+                            Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
+                            Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-holder col-lg-4 col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Simulation Vendors"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Simulation Vendors</h5>
+                        <p class="card-text">
+                            Vivamus varius, augue sed malesuada luctus, purus lectus posuere orci, eget dictum est risus non diam.
+                            Suspendisse dictum vehicula sem, vel commodo lorem aliquam in. Nunc at metus justo. Etiam.</p>
+                    </div>
+                </div>
+            </div>
 
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+            <div class="card-holder col-lg-4 col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Research Labs" />
+                    <div class="card-body">
+                        <h5 class="card-title">Research Labs</h5>
+                        <p class="card-text">
+                            Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
+                            Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="bg-dark py-3 py-lg-5">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12 col-lg-6 text-center">
+                <a class="small text-light" href="mailto:saron312@yandex.ru">saron312@yandex.ru</a>
+            </div>
+            <div class="col-12 col-lg-6 text-center mt-3 mt-lg-0">
+                <div class="small text-center mr-auto text-muted">Copyright &copy; 2019 - Open Sim</div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
