--- a/Portal/ClientApp/src/app/components/home/home.component.html
+++ b/Portal/ClientApp/src/app/components/home/home.component.html
@@ -12,8 +12,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card">
-                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Training Centers"/>
+                <div class="card h-100">
+                    <img class="card-img-top" src="/assets/images/training-center.jpg" alt="Training Centers"/>
                     <div class="card-body">
                         <h5 class="card-title">Training Centers</h5>
                         <p class="card-text">
@@ -24,8 +24,8 @@
                 </div>
             </div>
             <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card">
-                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Simulation Vendors"/>
+                <div class="card h-100">
+                    <img class="card-img-top" src="/assets/images/simulation-vendor.jpg" alt="Simulation Vendors"/>
                     <div class="card-body">
                         <h5 class="card-title">Simulation Vendors</h5>
                         <p class="card-text">
@@ -36,8 +36,8 @@
             </div>
 
             <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card">
-                    <img class="card-img-top" src="/assets/images/training_center.jpg" alt="Research Labs" />
+                <div class="card h-100">
+                    <img class="card-img-top" src="/assets/images/research-lab.jpg" alt="Research Labs" />
                     <div class="card-body">
                         <h5 class="card-title">Research Labs</h5>
                         <p class="card-text">
