iamges aligned text content added

--- a/Portal/ClientApp/src/app/components/home/home.component.html
+++ b/Portal/ClientApp/src/app/components/home/home.component.html
@@ -16,9 +16,8 @@
                     <img class="card-img-top" src="/assets/images/training-center.jpg" alt="Training Centers"/>
                     <div class="card-body">
                         <h5 class="card-title">Training Centers</h5>
-                        <p class="card-text">
-                            Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
-                            Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.
+                        <p class="card-text">Select solutions from different vendors or adjacent areas of simulations accordingly to your needs and budget.
+                            Single platform is the guarantee for no configuration distress
                         </p>
                     </div>
                 </div>
@@ -28,9 +27,7 @@
                     <img class="card-img-top" src="/assets/images/simulation-vendor.jpg" alt="Simulation Vendors"/>
                     <div class="card-body">
                         <h5 class="card-title">Simulation Vendors</h5>
-                        <p class="card-text">
-                            Vivamus varius, augue sed malesuada luctus, purus lectus posuere orci, eget dictum est risus non diam.
-                            Suspendisse dictum vehicula sem, vel commodo lorem aliquam in. Nunc at metus justo. Etiam.</p>
+                        <p class="card-text">Collaborate with other vensors to create solutions of unbeatable scale. Or just distribute your best on market products</p>
                     </div>
                 </div>
             </div>
@@ -40,10 +37,7 @@
                     <img class="card-img-top" src="/assets/images/research-lab.jpg" alt="Research Labs" />
                     <div class="card-body">
                         <h5 class="card-title">Research Labs</h5>
-                        <p class="card-text">
-                            Sed dolor ligula, egestas et vehicula nec, semper ac risus. Vestibulum tempus placerat auctor.
-                            Ut in tellus condimentum, maximus orci id, semper odio. Quisque porta turpis eu sodales gravida. Vestibulum.
-                        </p>
+                        <p class="card-text">Proof your latest concepts in realistic environment and make a path to convert it into a demanded product</p>
                     </div>
                 </div>
             </div>
