started material porting

--- a/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
+++ b/Portal/ClientApp/src/app/components/navmenu/navmenu.component.css
@@ -5,13 +5,13 @@
     color: #82aff5;
 }
 
-li.nav-item a {
-    color: lightgray
+mat-toolbar a {
+    color: lightgray;
+    margin: 0 1rem;
+    text-decoration: none;
 }
 
-li.link-active a,
-li.link-active a:hover,
-li.link-active a:focus {
+mat-toolbar a.link-active  {
     color: white;
 }
 
