--- a/Portal/ClientApp/src/app/components/navmenu/navmenu.component.html
+++ b/Portal/ClientApp/src/app/components/navmenu/navmenu.component.html
@@ -1,5 +1,42 @@
+<mat-toolbar>
+    <mat-toolbar-row>
+        <a id="brand" [routerLink]="['/home']">Open Sim</a>
+
+        <div fxHide.lt-md>
+            <a [routerLink]="['/servers']" [routerLinkActive]="['link-active']">Servers</a>
+            <a [routerLink]="['/simulations']" [routerLinkActive]="['link-active']">Simulations</a>  
+        </div>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<!-- <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+                 [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+                 [mode]="(isHandset$ | async) ? 'over' : 'side'"
+                 [opened]="!(isHandset$ | async)">
+        <mat-toolbar>Menu</mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item href="#">Link 1</a>
+            <a mat-list-item href="#">Link 2</a>
+            <a mat-list-item href="#">Link 3</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <button
+                type="button"
+                aria-label="Toggle sidenav"
+                mat-icon-button
+                (click)="drawer.toggle()"
+                *ngIf="isHandset$ | async">
+                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+            </button>
+            <span>ClientApp</span>
+        </mat-toolbar>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="nav-link" id="brand" [routerLink]="['/home']">Open Sim</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,4 +50,4 @@
             </li>
         </ul>
     </div>
-</nav>
+</nav> -->
