--- a/Portal/ClientApp/src/app/components/app/app.component.html
+++ b/Portal/ClientApp/src/app/components/app/app.component.html
@@ -1,16 +1,9 @@
-<div class="row">
-    <div class="col no-gutters">
-        <nav-menu></nav-menu>
+<div class="mat-app-background">
+    <nav-menu></nav-menu>
+    
+    <div *ngIf="errors" class="bg-danger text-white text-center p-2 m-2">
+        <h6 *ngFor="let error of errors">{{error}}</h6>
     </div>
-</div>
-<div class="container-fluid body-content">
-    <div class="row">
-        <div class="col px-0">
-            <div *ngIf="errors" class="bg-danger text-white text-center p-2 m-2">
-                <h6 *ngFor="let error of errors">{{error}}</h6>
-            </div>
 
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+    <router-outlet></router-outlet>
 </div>
