--- a/Portal/ClientApp/src/app/components/home/home.component.html
+++ b/Portal/ClientApp/src/app/components/home/home.component.html
@@ -1,48 +1,36 @@
-<header class="masterhead">
-    <div class="container h-100">
-        <div class="h-100 row align-items-end justify-content-center text-center">
-            <div class="d-flex-column mb-5">
-                <h1 class="display-4 display-lg-2 text-light text-uppercase" id="heading">Where simulations meet</h1>
-            </div>
-        </div>
-    </div>
+<header id="masterhead">
+    <h1 id="heading">Where simulations meet</h1>
 </header>
 
-<section class="cards page-section bg-light">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card h-100">
-                    <img class="card-img-top" src="/assets/images/training-center.jpg" alt="Training Centers"/>
-                    <div class="card-body">
-                        <h5 class="card-title">Training Centers</h5>
-                        <p class="card-text">Select solutions from different vendors or adjacent areas of simulations accordingly to your needs and budget.
-                            Single platform is the guarantee for no configuration distress
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card h-100">
-                    <img class="card-img-top" src="/assets/images/simulation-vendor.jpg" alt="Simulation Vendors"/>
-                    <div class="card-body">
-                        <h5 class="card-title">Simulation Vendors</h5>
-                        <p class="card-text">Collaborate with other vensors to create solutions of unbeatable scale. Or just distribute your best on market products</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-holder col-lg-4 col-sm-12">
-                <div class="card h-100">
-                    <img class="card-img-top" src="/assets/images/research-lab.jpg" alt="Research Labs" />
-                    <div class="card-body">
-                        <h5 class="card-title">Research Labs</h5>
-                        <p class="card-text">Proof your latest concepts in realistic environment and make a path to convert it into a demanded product</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<section class="cards">
+    <mat-grid-list cols="3">
+        <mat-grid-tile>
+            <mat-card>
+                <img mat-card-image src="/assets/images/training-center.jpg" alt="Training Centers" />
+                <mat-card-title>Training Centers</mat-card-title>
+                <mat-card-content>Select solutions from different vendors or adjacent areas of
+                    simulations accordingly to your needs and budget.
+                    Single platform is the guarantee for no configuration distress
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card class="card">
+                <img mat-card-image src="/assets/images/simulation-vendor.jpg" alt="Simulation Vendors" />
+                <mat-card-title>Simulation Vendors</mat-card-title>
+                <mat-card-content>Collaborate with other vensors to create solutions of unbeatable scale. Or
+                    just distribute your best on market products</mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card class="card">
+                <img mat-card-image src="/assets/images/research-lab.jpg" alt="Research Labs" />
+                <mat-card-title>Research Labs</mat-card-title>
+                <mat-card-content>Proof your latest concepts in realistic environment and make a path to
+                    convert it into a demanded product</mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
 </section>
 
 <footer class="bg-dark py-3 py-lg-5">
@@ -57,5 +45,3 @@
         </div>
     </div>
 </footer>
-
-
